--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div id="profile">
         <img
           src="./assets/avatar.png"
-          alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo"
+          alt="Foto de Mayk Brito"
         />
-        <p>@maykbrito</p>
+        <p>@rickfouquet</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -42,20 +42,20 @@
         </li>
 
         <li>
-          <a href="#" target="_blank">Conheça o explorer</a>
+          <a href="#">Conheça o explorer</a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://github.com/RickFqt/" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/rickfouquet/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="#">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/henrique-fouquet-0776a3266/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
